# ras_urdf_common

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch.py  rviz_bringup.launch.py
meshes/: TN_collisionMesh1.stl  TN_hull_BB_1.stl  TN_propeller1.stl
rviz/: urdf.rviz
scripts/: azi_joint_state_broadcaster.py
urdf/: titoneri.urdf.xacro
