<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ras_urdf_common</name>
  <version>0.0.0</version>
  <description>Common URDF descriptions and operation for Researchlab Autonomous Shipping Delft</description>
  <maintainer email="bartboogmans@hotmail.com">Bart Boogmans</maintainer>
  
  <license>TODO: License declaration</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>
  <author email="bartboogmans@hotmail.com">Bart Boogmans</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
